# hackspark-commitseppuku

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agentic-service/: Dockerfile  ty.toml
agentic-service/ai_agent_service/: grpc_service.py  http_app.py  main.py
agentic-service/ai_agent_service/api/: routes.py
agentic-service/ai_agent_service/core/: config.py
agentic-service/ai_agent_service/schemas/: chat.py
agentic-service/ai_agent_service/services/: chat_service.py  knowledge_base.py  redis_client.py  session_store.py  tool_executor.py
analytics-service/: Dockerfile  ty.toml
analytics-service/analytics_service/: grpc_service.py  http_app.py  main.py
analytics-service/analytics_service/api/: routes.py
analytics-service/analytics_service/core/: config.py
analytics-service/analytics_service/services/: analytics.py
api-gateway/: Dockerfile
api-gateway/gateway/: main.py
api-gateway/gateway/api/: routes.py
docker/requirements/: agentic-service.txt  api-gateway.txt  rental-service.txt  user-service.txt
docs/: README.md  api-documentation.md  architecture.md  chat-curl-examples.md  development-guide.md  git-workflow.md  observability.md  operations.md
docs/algorithms/: README.md  p10-free-streak.md  p11-peak-window.md  p12-merged-feed.md  p13-surge-days.md  p14-recommendations.md  p7-availability.md  p8-kth-busiest-date.md  p9-top-categories.md
frontend/: AGENTS.md  Dockerfile  README.md
frontend/app/: company-pages.css  landing.css  layout.tsx  page.tsx
frontend/lib/: auth-service.ts
gateway/: Dockerfile
gateway/gateway/: main.py
monitoring/prometheus/: prometheus.yml
proto/: agentic.proto  analytics.proto  rental.proto  user.proto
rental-service/: Dockerfile
rental-service/rental_service/: grpc_service.py  http_app.py  main.py
scripts/: add-service.sh  start-agentic.sh  start-analytics.sh  start-auth.sh  start-items.sh  start-rental.sh  start-user.sh  verify-chapter1.sh  verify-chapter2.sh  verify-chapter3.sh
services/ai_agent_service/: Dockerfile
services/auth_service/: Dockerfile  ty.toml
services/item-service/: Dockerfile  alembic.ini  ty.toml
shared/app_core/: __init__.py  central_api.py  config.py  database.py  grpc_errors.py  grpc_interceptors.py  http.py  logging.py  metrics.py  security.py  service_runtime.py
shared/grpc_gen/: agentic_pb2.py  agentic_pb2_grpc.py  analytics_pb2.py  analytics_pb2_grpc.py  rental_pb2.py  rental_pb2_grpc.py  user_pb2.py  user_pb2_grpc.py
tests/: conftest.py
tests/integration/: test_gateway.py
tests/unit/: test_ai.py  test_auth.py  test_bonus_b1_b2.py  test_chapter2_gateway.py  test_chapter2_rentals.py  test_chapter3_analytics.py  test_chapter3_gateway.py  test_chapter3_rentals.py  test_discount.py  test_gateway_validation.py  test_items.py  test_metrics.py  test_monitoring_assets.py  test_observability.py
user-service/: Dockerfile  alembic.ini
user-service/auth_service/: grpc_service.py  http_app.py  main.py
(+109 files in other folders)
