[project]
name = "hackspark"
version = "0.1.0"
description = "Hackathon-ready FastAPI microservices boilerplate."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite==0.21.0",
    "alembic==1.16.4",
    "argon2-cffi==25.1.0",
    "asyncpg==0.30.0",
    "email-validator==2.2.0",
    "fastapi==0.116.1",
    "google-generativeai==0.8.3",
    "groq==0.13.1",
    "grpcio==1.68.1",
    "grpcio-health-checking==1.68.1",
    "httpx==0.28.1",
    "motor==3.7.0",
    "openai==1.58.1",
    "prometheus-client==0.23.1",
    "pydantic-settings==2.10.1",
    "redis==6.4.0",
    "python-jose[cryptography]==3.5.0",
    "sqlalchemy[asyncio]==2.0.43",
    "structlog==25.4.0",
    "uvicorn[standard]==0.35.0",
]

[dependency-groups]
dev = [
    "grpcio-tools==1.68.1",
    "pytest==8.4.2",
    "pytest-asyncio>=0.25.3",
    "ruff==0.13.3",
    "ty==0.0.1a19",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["shared/grpc_gen"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: end-to-end tests that span multiple services (slow; skip with -m 'not integration')",
    "unit: fast isolated unit tests",
]

[tool.ty.environment]
python-version = "3.12"
extra-paths = [
    ".",
    "api-gateway",
    "user-service",
    "agentic-service",
    "rental-service",
    "analytics-service",
]

[tool.ty.terminal]
error-on-warning = true
output-format = "concise"
